Update Render configuration with API key

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: presenton-api
     env: python
-    rootDirectory: servers/fastapi
+    rootDir: servers/fastapi
     buildCommand: pip install -e .
     startCommand: uvicorn api.main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
@@ -19,3 +19,6 @@ services:
         value: /tmp
       - key: RENDER_API_KEY
         value: rnd_PnC0sLWXD9ohxpvGYKkZY4Lm6c9W
+    buildFilter:
+      paths:
+        - servers/fastapi/**
