--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -26,5 +26,9 @@ dependencies = [
     "sqlmodel>=0.0.24",
 ]
 
+[build-system]
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [[tool.uv.index]]
 url = "https://download.pytorch.org/whl/cpu"
