fastapi: add uvicorn dependency for runtime

--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "python-pptx>=1.0.2",
     "redis>=6.2.0",
     "sqlmodel>=0.0.24",
+    "uvicorn>=0.30.0",
 ]
 
 [tool.setuptools.packages.find]
