--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -1,8 +1,7 @@
 [project]
 name = "presenton-backend"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
+description = "presenton fastapi backend"
 requires-python = ">=3.11,<3.12"
 dependencies = [
     "fastapi[standard]>=0.116.1",
