--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
     name: presenton-api
     env: python
     rootDir: servers/fastapi
-    buildCommand: pip install -e .
+    buildCommand: pip install -U pip setuptools wheel && pip install -e .
     startCommand: uvicorn api.main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11
       - key: SUPABASE_URL
         sync: false
       - key: SUPABASE_JWT_SECRET
