--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "uvicorn>=0.30.0",
     "sqlmodel>=0.0.24",
+    "aiohttp>=3.9.0",
     "aiosqlite>=0.21.0",
     "asyncpg>=0.30.0",
     "python-jose[cryptography]>=3.3.0",
