--- a/servers/nextjs/package.json
+++ b/servers/nextjs/package.json
@@ -74,6 +74,8 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.0.0",
     "cypress": "^14.3.3",
     "esbuild": "0.25.8",
     "tailwindcss": "^3.4.1",
