--- a/servers/nextjs/package.json
+++ b/servers/nextjs/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.2.8",
+    "@sparticuz/chromium": "^141.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-underline": "^2.0.0",
     "@tiptap/react": "^2.11.5",
@@ -52,6 +53,7 @@
     "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
     "puppeteer": "^24.13.0",
+    "puppeteer-core": "^24.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -74,10 +76,10 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.0",
     "cypress": "^14.3.3",
     "esbuild": "0.25.8",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
