--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 description = "presenton fastapi backend"
 requires-python = ">=3.11,<3.12"
 dependencies = [
-    "fastapi[standard]>=0.116.1",
+    "fastapi>=0.116.1",
     "uvicorn>=0.30.0",
     "sqlmodel>=0.0.24",
     "aiohttp>=3.9.0",
