--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -20,6 +20,11 @@ dependencies = [
     "openai>=1.0.0",
     "anthropic>=0.24.0",
     "google-generativeai>=0.7.0",
+    "python-pptx>=0.6.21",
+    "Pillow>=10.4.0",
+    "lxml>=5.3.0",
+    "pdfplumber>=0.11.4",
+    "docling>=2.0.0",
 ]
 
 [tool.setuptools.packages.find]
