--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "presenton-backend"
-version = "0.1.2"
+version = "0.1.3"
 description = "presenton fastapi backend"
 requires-python = ">=3.11,<3.12"
 dependencies = [
@@ -19,7 +19,7 @@ dependencies = [
     "pathvalidate>=3.3.1",
     "openai>=1.0.0",
     "anthropic>=0.24.0",
-    "google-generativeai>=0.7.0",
+    "google-genai>=1.0.0",
     "python-pptx>=0.6.21",
     "Pillow>=10.4.0",
     "lxml>=5.3.0",
