--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "pathvalidate>=3.3.1",
     "openai>=1.0.0",
     "anthropic>=0.24.0",
-    "google-genai>=1.0.0",
+    "google-genai",
     "python-pptx>=0.6.21",
     "Pillow>=10.4.0",
     "lxml>=5.3.0",
