--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: presenton-api
     env: python
     rootDir: servers/fastapi
-    buildCommand: pip install -U pip setuptools wheel && pip install --extra-index-url https://download.pytorch.org/whl/cpu -e .
+    buildCommand: pip install -U pip setuptools wheel && pip install --extra-index-url https://download.pytorch.org/whl/cpu --prefer-binary --no-cache-dir -e . && pip install --prefer-binary --no-cache-dir google-genai
     startCommand: uvicorn api.main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
     envVars:
