--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,11 @@
 services:
   - type: web
     name: presenton-api
-    env: python
-    rootDir: servers/fastapi
-    buildCommand: pip install -U pip setuptools wheel && pip install --extra-index-url https://download.pytorch.org/whl/cpu --prefer-binary --no-cache-dir -e . && pip install --prefer-binary --no-cache-dir google-genai
-    startCommand: uvicorn api.main:app --host 0.0.0.0 --port $PORT
+    runtime: image
+    image: ghcr.io/zachhhhh/presenton:latest
+    dockerCommand: uvicorn api.main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11
       - key: HEAVY_FEATURES_ENABLED
         value: "false"
       - key: CAN_CHANGE_KEYS
@@ -25,5 +22,3 @@ services:
         value: /tmp/app_data
       - key: TEMP_DIRECTORY
         value: /tmp
-      - key: RENDER_API_KEY
-        value: rnd_PnC0sLWXD9ohxpvGYKkZY4Lm6c9W
