Render: deploy FastAPI via Dockerfile; add Next.js web service; link API via fromService; add health checks; bind Node to PORT; fix PDF export to return file

--- a/.github/workflows/docker-ghcr.yml
+++ b/.github/workflows/docker-ghcr.yml
@@ -30,6 +30,7 @@ jobs:
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: linux/amd64
           tags: |
             ghcr.io/zachhhhh/presenton:latest
             ghcr.io/zachhhhh/presenton:${{ github.sha }}
