--- a/servers/fastapi/Dockerfile
+++ b/servers/fastapi/Dockerfile
@@ -23,5 +23,5 @@ RUN pip install -U pip setuptools wheel && \
 
 EXPOSE 8000
 
-# Default command (override with platform start command as needed)
-CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Default command (respect Render-provided PORT if set)
+CMD ["sh", "-lc", "uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
