--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "uvicorn>=0.30.0",
     "sqlmodel>=0.0.24",
+    "greenlet>=3.0.0",
     "aiohttp>=3.9.0",
     "aiosqlite>=0.21.0",
     "asyncpg>=0.30.0",
