--- a/servers/nextjs/package.json
+++ b/servers/nextjs/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "next dev ",
     "build": "next build",
@@ -35,7 +38,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.2.8",
-    "@sparticuz/chromium": "^141.0.0",
+    "@sparticuz/chromium": "^123.0.0",
+
+
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-underline": "^2.0.0",
     "@tiptap/react": "^2.11.5",
@@ -52,8 +57,8 @@
     "next": "^14.2.14",
     "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
-    "puppeteer": "^24.13.0",
-    "puppeteer-core": "^24.30.0",
+
+
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
