fix(api): robust root redirect; support FRONTEND_URL and full host; chore(render): expose FRONTEND_URL from web service

--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,11 @@ services:
           name: presenton-web
           type: web
           property: host
+      - key: FRONTEND_URL
+        fromService:
+          name: presenton-web
+          type: web
+          property: url
       - key: HEAVY_FEATURES_ENABLED
         value: "false"
       - key: CAN_CHANGE_KEYS
