chore(render): wire FRONTEND_BASE_URL and FRONTEND_URL from web service for API redirect

--- a/render.yaml
+++ b/render.yaml
@@ -18,6 +18,11 @@ services:
           name: presenton-web
           type: web
           property: url
+      - key: FRONTEND_BASE_URL
+        fromService:
+          name: presenton-web
+          type: web
+          property: url
       - key: HEAVY_FEATURES_ENABLED
         value: "false"
       - key: CAN_CHANGE_KEYS
