fix: enable ppt endpoints and clean temp dir handling

--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "presenton",
   "version": "1.0.0",
   "type": "module",
-  "description": "Open-source AI presentation generator"
+  "description": "Open-source AI presentation generator",
+  "scripts": {
+    "vercel-build": "next build"
+  }
 }
