--- a/servers/nextjs/package.json
+++ b/servers/nextjs/package.json
@@ -57,6 +57,7 @@
     "next": "^14.2.14",
     "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
+    "puppeteer-core": "^24.30.0",
 
 
     "react": "^18.3.1",
