--- a/servers/fastapi/pyproject.toml
+++ b/servers/fastapi/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "openai>=1.0.0",
     "anthropic>=0.24.0",
     "google-genai",
+    "chromadb>=1.0.15",
     "python-pptx>=0.6.21",
     "Pillow>=10.4.0",
     "lxml>=5.3.0",
